# ResearchAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/foundation/: pdf.py
src/research/: __init__.py
src/research/agents/: __init__.py  abstract_generator.py  expermient_conductor.py  gap_identifier.py  hypothesis_generator.py  methodology_planner.py  paper_summarizer.py  paper_writer.py  questionnaire.py  reference_geneartor.py  related_work.py  results_analyzer.py  system_designer.py
src/research/agents/response/: __init__.py  abstract.py  experiment.py  gap_identifer.py  hypothesis.py  methodology.py  paper_summary.py  questions.py  reference.py  related_work.py  results_analysis.py  system_design.py
src/research/coordinator/: __init__.py  coordinator.py  pipeline.py  transformers.py
